--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title:  Analysis of the the planning application for extending Bonnington Mains Quarry
+subtitle: asdff
 ---
