update dust assesment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title:  Analysis of the the planning application for extending Bonnington Mains Quarry
-subtitle: asdff
+title:  Bonnington Quarry Expansion
+subtitle: Planning Application Analysis and Objections
 ---
