--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ planning_ref: 23/06181/FUL
         <li>Track the application's progress</li>
     </ul>
     <p><a href="{{ page.planning_link }}" class="btn btn-primary btn-lg">View and Comment on Planning Application {{ page.planning_ref }} →</a></p>
-    <p class="small-note">Comments must be submitted through the official planning portal to be considered by the Council.</p>
+    <p class="small-note">Comments must be submitted through the official planning portal to be considered by the Council.</p> <b>Closing date for commments 9th Feb 2025</b>
 </div>
