--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@ planning_ref: 23/06181/FUL
 ---
 
 <div class="box-note">
-    <h2>Take Action: Submit Your Comments</h2>
+    <h2>Take Action: Submit Your Objections</h2>
     <p>Your voice matters in the planning process. Visit the City of Edinburgh Council's planning portal to:</p>
     <ul>
         <li>Review the full planning application documents</li>
-        <li>Submit your comments or objections</li>
+        <li>Submit your objections</li>
         <li>Track the application's progress</li>
     </ul>
     <p><a href="{{ page.planning_link }}" class="btn btn-primary btn-lg">View and Comment on Planning Application {{ page.planning_ref }} →</a></p>
     <p class="small-note">Comments must be submitted through the official planning portal to be considered by the Council.  <b>Closing date for comments 9th Feb 2025</b></p>
 </div>
-q
