update landing page

--- a/index.html
+++ b/index.html
@@ -16,4 +16,10 @@ planning_ref: 23/06181/FUL
     </ul>
     <p><a href="{{ page.planning_link }}" class="btn btn-primary btn-lg">View and Comment on Planning Application {{ page.planning_ref }} →</a></p>
     <p class="small-note">Comments must be submitted through the official planning portal to be considered by the Council.  <b>Closing date for comments 9th Feb 2025</b></p>
+
+    <br/>
+    <audio controls>
+        <source src="https://notebooklm.google.com/notebook/81ccdf38-d452-4527-afcd-d95718cb0dc0/audio" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </div>
