--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ planning_ref: 23/06181/FUL
 
     <div class="custom-audio-player">
         <audio controls>
-            <source src="/path/to/your/conversation.mp3" type="audio/mpeg">
+            <source src="/assets/conversation.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div class="audio-caption">
