update landing page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ planning_ref: 23/06181/FUL
             Your browser does not support the audio element.
         </audio>
         <div class="audio-caption">
-            Listen to a conversation about the impact of the application...
+            Listen to a conversation about the impact of the application and what you can do to stop it.
         </div>
     </div>
 </div>
