update landing page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title:  Bonnington Quarry Expansion
 subtitle: Planning Application Analysis and Objections
 planning_link: https://citydev-portal.edinburgh.gov.uk/idoxpa-web/applicationDetails.do?activeTab=summary&keyVal=SNPUZREWGDP00
 planning_ref: 24/05865/FUL
+image: /assets/img/banner.png
 ---
 
 <div class="box-note">
