remove direct link to plannig portal

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title:  Bonnington Quarry Expansion
 subtitle: Planning Application Analysis and Objections
-planning_link: https://citydev-portal.edinburgh.gov.uk/idoxpa-web/applicationDetails.do?activeTab=summary&keyVal=SNPUZREWGDP00
+planning_link: https://citydev-portal.edinburgh.gov.uk/
 planning_ref: 24/05865/FUL
 image: /assets/img/banner.png
 ---
@@ -15,6 +15,7 @@ image: /assets/img/banner.png
         <li>Submit your objections</li>
         <li>Track the application's progress</li>
     </ul>
+    <p>Visit the official planning portal below - and enter the application reference {{ page.planning_ref }} </p>
     <p><a href="{{ page.planning_link }}" class="btn btn-primary btn-lg">View and Comment on Planning Application {{ page.planning_ref }} →</a></p>
     <p class="small-note">Comments must be submitted through the official planning portal to be considered by the Council.  <b>Closing date for comments 9th Feb 2025</b></p>
 
